--- a/jayjournel-website-template-expressjs-nodejs-master/resources/static/css/common.css
+++ b/jayjournel-website-template-expressjs-nodejs-master/resources/static/css/common.css
@@ -24,7 +24,7 @@
 }
 
 .header-bg{
-  background:linear-gradient(to left, #ee390f 0%, #f9b700 51%, #ee390f 100%);
+  background:linear-gradient(to left, #3bb9eb 0%, #f9b700 51%, #3bb9eb 100%);
   padding:-10px -10px -25px;
 }
 .header-logo{
