--- a/jayjournel-website-template-expressjs-nodejs-master/views/beamember.ejs
+++ b/jayjournel-website-template-expressjs-nodejs-master/views/beamember.ejs
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="/static/css/student-registration.css">
     <link rel="stylesheet" href="/static/css/staff.css">
     <link rel="stylesheet" href="/static/css/common.css">
+    <link rel="stylesheet" href="/static/css/animatedheader.css">
     
 </head>
 
@@ -169,6 +170,10 @@
     <script src="/static/javascripts/custom.js"></script>
     <script src="/static/javascripts/jquery.blockUI.js"></script>
     <script src="/static/javascripts/beamember.js"></script>
+    <script src="/static/javascripts/animatedheader.js"></script>
+    <script src="/static/javascripts/TweenLite.min.js"></script>
+    <script src="/static/javascripts/EasePack.min.js"></script>
+    <script src="/static/javascripts/demo.js"></script>
 </body>
 
 </html>
