--- a/jayjournel-website-template-expressjs-nodejs-master/views/contact.ejs
+++ b/jayjournel-website-template-expressjs-nodejs-master/views/contact.ejs
@@ -22,6 +22,7 @@
     <!-- style CSS -->
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/css/common.css">
+    <link rel="stylesheet" href="/static/css/animatedheader.css">
 </head>
 <body>
     <!--::header part start::-->
@@ -266,6 +267,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="/static/javascripts/waypoints.min.js"></script>
 <!-- custom js -->
 <script src="/static/javascripts/custom.js"></script>
+
+
+<script src="/static/javascripts/animatedheader.js"></script>
+    <script src="/static/javascripts/TweenLite.min.js"></script>
+    <script src="/static/javascripts/EasePack.min.js"></script>
+    <script src="/static/javascripts/demo.js"></script>
+
 <!-- <script src="/static/javascripts/map.js"></script> -->
 <!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
 </body>
