--- a/jayjournel-website-template-expressjs-nodejs-master/views/editordetails.ejs
+++ b/jayjournel-website-template-expressjs-nodejs-master/views/editordetails.ejs
@@ -24,6 +24,7 @@
     <!-- style CSS -->
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/css/common.css">
+    <link rel="stylesheet" href="/static/css/animatedheader.css">
 </head>
 
 <body>
@@ -334,6 +335,11 @@
     <script src="/static/javascripts/waypoints.min.js"></script>
     <!-- custom js -->
     <script src="/static/javascripts/custom.js"></script>
+    <script src="/static/javascripts/animatedheader.js"></script>
+    <script src="/static/javascripts/TweenLite.min.js"></script>
+    <script src="/static/javascripts/EasePack.min.js"></script>
+    <script src="/static/javascripts/demo.js"></script>
+
 </body>
 
 </html>
