--- a/jayjournel-website-template-expressjs-nodejs-master/views/header.ejs
+++ b/jayjournel-website-template-expressjs-nodejs-master/views/header.ejs
@@ -4,16 +4,24 @@
 
     <!-- <img class=" " src="static/images/ajrsbannernew.jpg" width="1349" height="101" > -->
     
-     <div class="header header-bg">
+     <div class="header header-bg ">
         <div class="container">
           <div class="">
-            <img class="wrapingimage " src="static/images/ajrslogo.png" width="40" height="50" allign="left">
+            <!-- <img class="wrapingimage " src="static/images/ajrslogo.png" width="40" height="50" allign="left"> -->
             <div class="col-md-auto">
-                <!-- <h1><span class="header-title-english">Asian Journal of Research Scholars</span></h1> -->
-                <!-- <p align="right">e-ISSN:</p> -->
                 
-                <h1 class="header-logo-title"><span class="header-title-english">Sam Publications</span>
-                    <span class="issn-no">e-ISSN: 2584-2994</span></h1>
+
+                  <div id="large-header" class="large-header" style="height: 340px;">
+                    <canvas id="demo-canvas" width="1366" height="340"></canvas>
+                    <h1 class="main-title">Connect <span class="thin">Three</span></h1>
+                  </div>
+                <h1><span class="header-title-english content">ABC</span></h1>
+                <p align="right">e-ISSN:</p>
+
+              
+                
+                <!-- <h1 class="header-logo-title"><span class="header-title-english">ABC Publications</span>
+                    <span class="issn-no">e-ISSN: </span></h1> -->
                 
                 
             </br>
