--- a/jayjournel-website-template-expressjs-nodejs-master/views/index.ejs
+++ b/jayjournel-website-template-expressjs-nodejs-master/views/index.ejs
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="/static/css/common.css">
     <link rel="stylesheet" href="/static/css/texteffect.css">
     <link rel="stylesheet" href="/static/css/home.css">
+    <link rel="stylesheet" href="/static/css/animatedheader.css">
     
     
 </head>
@@ -63,7 +64,7 @@
                         
                         <div class="section_tittle_new text-center">
                             <!-- <p>tesimonials</p> -->
-                            <h2>Asian Journal of Research Scholars</h2>
+                            <h2>ABC</h2>
                             
                         </div>
                         
@@ -796,6 +797,10 @@
     <!-- custom js -->
     <script src="/static/javascripts/custom.js"></script>
     <script src="/static/javascripts/bootstrap.bundle.min.js"></script>
+    <script src="/static/javascripts/animatedheader.js"></script>
+    <script src="/static/javascripts/TweenLite.min.js"></script>
+    <script src="/static/javascripts/EasePack.min.js"></script>
+    <script src="/static/javascripts/demo.js"></script>
 
 </body>
 
